--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -1,1 +1,15 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Prata&display=swap');
 @import "tailwindcss";
+::-webkit-scrollbar{
+    display: none;
+}
+
+.active{
+    background-color: #ffebf5;
+    border-color: #C586A5;
+}
+
+*{
+    font-family: Outfit;
+}
