--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -13,3 +13,9 @@
 *{
     font-family: Outfit;
 }
+
+select,input,textarea{
+    border: 1px solid #c2c2c2;
+    outline-color: #c586A5;
+    border-radius: 4px;
+}
